--- a/conweb/static/scss/_layout.scss
+++ b/conweb/static/scss/_layout.scss
@@ -108,7 +108,7 @@
   text-align: center;
   padding: 0 40px;
   max-width: 1200px;
-  margin: 2em 0;
+  margin: 2em auto;
   p {
     margin: 0;
   }
